# github-control

./: Cargo.toml  README.md  github_schema.json
.github/workflows/: build.yml  lint.yml  on-publish.yml  publish.yml
src/: main.rs
src/application/: env.rs  mod.rs  screen_writer.rs
src/application/configuration/: config_file.rs
src/infrastructure/github/: getStatus.graphql  github.rs
