[package]
name = "github-control"
version = "0.1.0"
authors = ["Anthony Griffon <an.griffon@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.32"
confy = "0.4.0"                # Boilerplate-free configuration management
exitcode = "1.1.2"     # Preferred system exit codes as defined by sysexits.h
graphql_client = "0.9.0"
reqwest = { version = "0.10.7", features = ["blocking", "json"] }
serde = "^1.0"
serde_json = "^1.0"
termion = "1.5.5"
webbrowser = "0.5.5"
