[package]
name = "github-control"
version = "0.1.0"
authors = ["Anthony Griffon <an.griffon@gmail.com>"]
description = "A simple commande line to keep control over your active pull requests on Github"
homepage = "https://github.com/Miaxos/github-control"
readme = "README.md"
repository = "https://github.com/Miaxos/github-control"
documentation = "https://github.com/Miaxos/github-control"
license = "MIT"
keywords = ["github", "cli", "command", "line", "pull", "requests", "review"]
categories = ["command-line-utilities"]
edition = "2018"

[[bin]]
name = "github-control"
path = "src/main.rs"
doc = false

[dependencies]
anyhow = "1.0.32"
confy = "0.4.0"                # Boilerplate-free configuration management
clap = "3.0.0-beta.1"              # A simple to use, efficient, and full-featured Command Line Argument Parser
exitcode = "1.1.2"     # Preferred system exit codes as defined by sysexits.h
graphql_client = "0.9.0"
reqwest = { version = "0.10.7", features = ["blocking", "json"] }
serde = "^1.0"
serde_json = "^1.0"
termion = "1.5.5"
webbrowser = "0.5.5"
